--- a/app/src/main/res/layout/fragment_camera2_basic.xml
+++ b/app/src/main/res/layout/fragment_camera2_basic.xml
@@ -22,6 +22,13 @@
         android:layout_alignParentTop="true"
         android:layout_gravity="center" />
 
+    <ImageView
+        android:id="@+id/annotation_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorAccent"
+        android:visibility="invisible" />
+
 
     <TextView
         android:id="@+id/annotation_text"
