--- a/app/src/main/res/layout/camera_layout.xml
+++ b/app/src/main/res/layout/camera_layout.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
 
-    tools:context="com.example.home.BequestProto.MainActivity">
+    tools:context=".MainActivity">
 
     <org.opencv.android.JavaCameraView
         android:layout_width="fill_parent"
