--- a/app/src/main/res/layout/card_gallery_image.xml
+++ b/app/src/main/res/layout/card_gallery_image.xml
@@ -2,11 +2,12 @@
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://srychemas.android.com/apk/res-auto"
     android:id="@+id/gallery_image"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:scaleType="fitCenter"
-    android:src="@drawable/monument"
-    android:background="@color/colorWhite">
+    android:background="@color/colorWhite"
+    android:padding="0dp"
+    android:layout_margin="0dp">
 
 
 </ImageView>
