--- a/app/src/main/res/layout/fragment_drag_ndrop.xml
+++ b/app/src/main/res/layout/fragment_drag_ndrop.xml
@@ -1,10 +1,10 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
     tools:context=".DragNDrop"
-    android:background="@color/colorGreen">
+    android:id="@+id/drag_n_drop_container">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_weight="1">
+        android:layout_alignParentStart="true">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerview_gallery"
@@ -24,30 +24,38 @@
             android:scrollbars="vertical"
             android:scrollbarStyle="insideOverlay"
             android:scrollbarSize="10dp"
-            android:background="@color/colorBlack" />
+            android:clipChildren="false" />
 
     </LinearLayout>
 
 
     <LinearLayout
-        android:id="@+id/query_drop_area"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_weight="2"
-        android:background="@color/colorWhite">
+        android:orientation="horizontal"
+        android:background="@color/trans_background">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Drop Area"
-                android:layout_centerInParent="true" />
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2">
+
+            <ImageView
+                android:id="@+id/query_drop_area"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/monument"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:background="@color/trans_background" />
         </RelativeLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
